src/test/resources/amyc/typer/failing/ConcatError.amy
object ConcatError
  1 ++ ""
end ConcatError
